governance-shared/baselines/3.12.0/ChronoPM-Portfolio/references/02-aggregation-query-rules.md
# 聚合查询规则（V-2～V-8、V-11、V-12）

聚合范围 = `portfolio/context/project-index.md` 已登记、挂载校验通过、且本期「是否纳入周报/查询」未排除的**一级成员项目**。未登记目录不参与。下级集工作区路径字段仅登记，不递归聚合。

**最小读取集**：只读索引与登记册表格行、PLAN WP 表、待办核心执行表行。不读全文、不读拆解 seg 正文，除非集经理点名某项目某文件。

进入本规则前必须已完成 V-1（03 号）扫描比对。防套娃未通过的项目整项剔除并告警。

## 1. 待办清单输出（同 Project R18）

适用范围：一切跨项目待办清单（我的待办 / 查某人 / 全员矩阵中的待办列）。

首行固定：

```
您今日待办跨 {N} 个子项目，共 {总数} 条（未办结 {X}、已办结 {Y}，待确认终态 {Z}）：
```

- 默认只列 **未办结** 行：待处理 / 进行中 / 已阻塞。评审是另一条待办，待办状态枚举无「待评审」。
- 已完成 / 已取消 / 已转出 = 已办结，默认不列行，只进首行计数。
- **未确认终态默认可见**：成员项目 `pm-decisions.md` 块 8「已经写了等点头」对应的终态（含日报自动完成）禁止当已办结隐藏；列在未办结，或单列「待确认完成」分组；`{Z}` 计入首行。不读成员 inbox/claim。过程日志只读各项目 `logs/ops/_index.md` 行，不把过程日志当进度事实。
- 展开已办结仅当集经理使用触发词：全部 / 含已完成 / 所有任务 / 展示所有 / 完整展示 / 所有待办（及同义显式表达）。AI 不得自行展开。
- **每一行必须：项目名 + 该项目 TD 编号** `TD-{缩写}-{YYYYMMDD}-{NNN}`，不得用 1、2、3 代替。

读法：按人按日读 `projects/{名}/ai/todos/{date}/{owner}.md` 核心表行 + 当日 `_index.md`；状态以待办文件为准。

## 1a. 查成员项目对话日志（推导，不加列）

project-index **不加日志指针列**。查询时：

```
锚点 = 集工作区根
成员日志索引 = {锚点}/{该行管理路径}/logs/ops/_index.md
存在 → 只读打开；不存在 → 「尚未发生」
```

禁止把成员日志正文抄进 portfolio。V-1 只负责收编成员，不写日志指针。新目录 ASK 收编后才参与探测。集层自己的对话记在 `portfolio/logs/`。集层请某项目改待办：只写集层日志一行（出处=集层→项目名），实际写入走该项目 ChronoPM-Project / 内部 V-9，禁止代写 `projects/*/ai`。

## 2. V-2 进度总览

数据源（每项目）：`plans/PLAN-*.md` 的 WP 表（状态/计划/实际）+ 待办按 WP Ref 聚合进度。待办 WP Ref 按**单值**计；空值或缺列只读降级；逗号/多值当脏数据，**不双计**进度。

输出：项目 × WP 进度表。列：项目、WP、状态、计划日期、预计/实际、偏差、未办结待办数。里程碑型 WP（`is_milestone: true`）单独或加标记。

偏差：实际或预计晚于计划的工作日数。缺计划日期则标「无基线」。WP 进度 = 该 WP 下待办状态聚合（派生，不建进度文件）。

## 3. V-3 人×项目视图

数据源（待办体系，**不再读 resource-register**）：各项目 `todos/{date}/` 个人文件 §0 / §0.5 + 同日 `_index.md`（§1 花名册为在组权威；§6 TD 缩写映射）。冲突时 `_index` §1 为权威，§0 仅佐证身份细节（联系方式/负责模块）。

输出：人 × 项目 × 未办结待办矩阵。每人一行「他还在哪几个项目有未完成待办」；详情指向该项目 `ai/`，不在集层复制待办。

**T1 排期冲突**（只提示不落盘）：同一人同一日期在 ≥2 个项目有未办结待办，或各项目分配比例合计 >100%。输出提示，不改任何项目文件。

**所属项目列漂移**：A 项目 `_index` §1 备注记王某同时在 B，B 的花名册无此人 → 提示漂移，列入内部 V-9，不静默改。对外白话说明两边不一致，不对用户说「建议更新清单」。

本视图禁止落盘。

## 4. V-4 跨项目风险 / 问题

完整实体在主归属项目 `risks/risk-register.md` 或 `issues/issue-register.md`。判定跨项目：影响项目 ≥2，或标注「跨项目」，或描述明确点名其他已登记项目。

输出：Risk/Issue ID、描述摘要、主归属项目、影响项目、等级、状态、应对摘要。编号兼容旧序号与时间戳号（`R-011` 与 `R-20260820-143025`）。

集层不建 risk-register。若集经理要求「记一条跨项目风险」→ 内部 V-9，指向主归属项目登记册。对外白话，不对用户说「建议更新清单」。

## 5. V-6 门禁最小值

存在跨项目统一门禁（封板 / 割接 / 上线窗口等）时：

**整体状态 = 所有相关项目该节点 WP 状态的最小值。任一未完成 = 整体未完成。**

输出：门禁名、整体状态、各项目该 WP 状态与原因。未达标标注具体项目。实时计算，不落盘。

无对应 WP 的项目标「未映射」，不把缺失当成已完成。

## 6. V-7 整体 P&L

数据源：各项目 `plans/budget.md`。

| 项目 | 合同额 | 成本线 | 已投入 | 人力成本 | CPI | 偏差 |
|------|--------|--------|--------|----------|-----|------|

合计人力成本占总合同额超预警线（默认 50%，项目 context 有约定则从其约定）必须主动预警。缺 budget 的项目标「待登记」，合计注明缺失项，禁止用 0 填补冒充完整。

实时计算，不落盘。写入集周报时该表是当期快照，须带 generated_from。

## 7. V-8 合同去重归并

数据源：各项目 `requirements/contract-register.md` 表格行 + 优先 `requirements/sources/{簇 ID}/ledger.md`（v3.7.0 为 9 列，缺列按 —；指纹优先 MD5，旧内容哈希或大小+mtime 仍识别）。未零清则可兼容读 `{type}-source/ledger.md`。

去重键 = **簇固定号 + fingerprint**（CON- / BID- / INIT- / COMP- / SUP- / TRN- 等，集内全局一致）。同键 = 同一份文档，归并视图只呈现一次，并标注存在于哪些项目。SRC-NNN 不是互认键。

**方案 β（簇 ID + 内容指纹）：**

| 判定 | 条件 | 行为 |
|------|------|------|
| 同源 | 簇 ID 相同且 fingerprint 相同 | 去重合并，计一份 |
| 标准一致 | 段数/标题结构一致 | 可聚合 |
| 内容一致 | 内容哈希一致 | 可聚合 |
| 冲突 | 同簇 ID 但 fingerprint 或内容不一致 | **提示版本差异**（各项目路径+指纹+parsed_by），不臆断以谁为准，不静默覆盖 |

单簇物理形态（v3.7.0）：优先 `requirements/sources/{簇 ID}/`（六件套含 parse-log）。兼容期只读旧 `{type}-source/`，直到该成员完成零清。禁止本包另造第三套目录。不读全文，除非点名比对冲突段。禁止二次拆解。接收侧对账由成员项目 WF-SD-1 执行，本包 V-8 只遍历去重。

## 7a. 实体进度聚合（v3.7.0，F12）

从各成员项目 `wps/WP-*.md` §3b 实体行实时聚合，不落地。无 §3b 则跳过该项并标注。跨项目推导规则（F13）仅本文件本段，不写成员项目。

集层不另存 contract-register 事实源。范围判定遍历各项目登记册 + 本条去重，不路由到集层存储。

## 8. 查询自动路由

跨项目查询按 project-index 成员范围自动遍历相关项目 `ai/`，不需用户逐个指定。用户点名项目则缩小范围。点名未登记名称 → 先走 V-1 提示登记，不得把未登记目录当成员读入结论。

**集层查词（V-12）**：先读 `portfolio/context/glossary-index.md` 指针行（术语 / 标准词 / 出现项目 / G 号 / 确认状态），返回各项目标准词与确认状态；查不到或指针失效，再按指针去该项目 `context/domain-glossary.md` **表格行取证**。只抽表格行（原词 / 标准词 / 状态 / G 号），**不读释义正文**。同一原词跨项目标准词不一致 → 提示漂移，走内部 V-9，不代改。索引滞后：命中指针后校验目标条目仍存在；不存在则标 stale 并提示刷新（懒刷新，不定时扫描）。

## 9. V-11 跨项目共享文件拆分

触发：「拆了这份文件」/「分到各项目」及同义。本能力是分析 + 建议，**不改变只读契约**。

1. 读源文件，按可归属段落/条目拆分。
2. **默认各放一份**（拆一次 + 拷贝到各目标项目）。原因：各项目独立自足、索引可独立维护、后续可演化出差异。
3. **不主动建议指针关联**（本包对成员只读，当前无通用跨项目文件引用；指针增加认知负担）。用户点名指针时，说明不推荐并仍给各放一份方案。
4. **拷贝时注意各项目索引可能不同**：为每个目标项目生成该项目专属的索引更新建议（已有编号接着编；尚未建 register 则先建议创建）。不得假设各项目编号连续或同构。
5. 内容无法归属任何已登记项目 → 请集经理指定归属；禁止把无法归属的内容写成集层事实源。
6. 输出模板：`assets/templates/shared-file-split-template.md`。必须含：归属建议、将复制到哪些项目、索引差异、须确认后才执行。
7. **须确认后才进入执行路径**。执行 = 内部生成 V-9（每条目标项目 + 目标文件 + 写入内容，标注「源自共享文件拆分」），由各项目 ChronoPM-Project 对话落地。
8. **V-11 只写 `portfolio/` 建议产物，永不写成员项目。** 用户要求「直接写入」→ 拒绝，提示切换到对应项目对话。

对外只给白话摘要（例如「三个项目各收一份，内容如下……」），禁止对用户说「建议更新清单」。
